--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="static/css/bootstrapKatrina.css">
-    <link rel="stylesheet" href="static/secondary.css">
+    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link rel="stylesheet" href="static/overwriteBootstrapDefaults.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <strong>
-                <nav>
-                    <ul class="menu">
-                        <li><a href="/home">Home</a></li>
-                        <li><a href="/katrina">About Katrina</a></li>
-                        <li><a href="/sarah">About Sarah</a></li>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="katrina">Katrina Cullen</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="sarah">Sarah Butterworth</a>
+                        </li>
+
                     </ul>
-                </nav>
-            </strong>
+                    <form class="form-inline my-2 my-lg-0">
+                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                  </div>
+            </nav>
         </div>
     </header>
-    <div class="container">
+    <div class="container" align="center">
         {% block content %}
         {% endblock %}
     </div>
