--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div class="home">
+    <div class="container">
         <h1>PhD People</h1>
         <p>Welcome to PhD People, where you can find out about us and our PhD research!</p>
     </div>
