--- a/templates/Sarah.html
+++ b/templates/Sarah.html
@@ -7,7 +7,7 @@
 <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div>
+    <div class="container">
         <h1>Sarah</h1>
         <p>Welcome to my website</p>
     </div>
