--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
                             <a class="nav-link" href="katrina">Katrina Cullen</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="sarah">Sarah Butterworth</a>
+                            <a class="nav-link" href="sarah">Sarah Butterworth</a>
                         </li>
 
                     </ul>
@@ -33,6 +33,11 @@
         {% block content %}
         {% endblock %}
     </div>
+    <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
+        <div class="container" align="center">
+            <i>Here be dragons!</i>
+        </div>
+    </footer>
 
 </body>
 </html>
