commit commit commit again...

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="static/css/bootstrap.css">
-    <link rel="stylesheet" href="static/overwriteBootstrapDefaults.css">
+    <link rel="stylesheet" href="static/css/secondary.css">
 </head>
 <body>
     <header>
@@ -21,10 +21,10 @@
                         </li>
 
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
+                    <!-- <form class="form-inline my-2 my-lg-0">
                       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
+                    </form> !-->
                   </div>
             </nav>
         </div>
@@ -35,7 +35,7 @@
     </div>
     <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
         <div class="container" align="center">
-            <i>Here be dragons!</i>
+            <i>Here be dragons!</i> <br> <small>© Katrina Cullen, 2019</small>
         </div>
     </footer>
 
