--- a/static/css/secondary.css
+++ b/static/css/secondary.css
@@ -1,10 +1,19 @@
 body {
-  background-color: #484F64;
+  background: url("/static/images/svg-patterns-1.png");
+  background-color: #303542;
+}
+
+h1 {
+    font-color: #A94B36;
+    }
+
+h2 {
+font: #CAA455;
 }
 
 .container {
-  background-color: #858798;
-  max-width: 700px;
+  background-color: rgba(160, 166, 154, 1);
+  max-width: 75%;
   }
 
 .responsive-img {
