--- a/templates/Katrina.html
+++ b/templates/Katrina.html
@@ -14,7 +14,7 @@
         <p>Good question! Nyex<sup>TM</sup> is a graphite based adsorbent created by <a href="#">Arvia Technology Ltd.</a> To put it simply, it acts like a sponge and adsorbs organics out of water. You can then pass electricity through a bed of Nyex<sup>TM</sup> to blast the organics apart and destroy them. The Nyex is then free to soak up more organics and the cycle starts again!</p>
     </div>
     <div>
-        <img class="responsive-img" src="/static/images/boxingFlakeNyex.png" alt="cartoon of flake nyex with red boxing gloves"><h3>vs.</h3><img class="responsive-img" src="/static/images/boxingGranularNyex.png" alt="cartoon of granulr nyex with blue boxing gloves">
+        <img class="responsive-img" src="/static/images/boxingFlakeNyex.png" alt="cartoon of flake nyex with red boxing gloves"><strong>  vs.  </strong><img class="responsive-img" src="/static/images/boxingGranularNyex.png" alt="cartoon of granulr nyex with blue boxing gloves">
     </div>
     {% endblock %}
 
