--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
     </div>
     <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
         <div class="container" align="center">
-            <i>Here be dragons!</i> <br> <small>© Katrina Cullen, 2019</small>
+            <i>Here be dragons!</i> <br> <small>© Katrina Cullen & Sarah Butterworth, 2019</small>
         </div>
     </footer>
 
