--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sarah Butterworth | PhD People</title>
+    <title>Keep in Touch | PhD People</title>
 </head>
 <body>
     {% extends "layout.html" %}
@@ -12,6 +12,12 @@
         <p>Sign up for our monthly email to learn more about our research.</p>
         <div id="contact-form">
           <form method="post" action="/signup">
+            <label for="firstname">Name:</label>
+            <input type="text" name="firstname">
+            <br>
+            <label for="lastname">Surname:</label>
+            <input type="text" name="lastname">
+            <br>
             <label for="email">Email address:</label>
             <input type="email" id="email" name="email" required="required">
             <input type="submit" value="Submit" id="submit-button">
