--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="sarah">Sarah Butterworth</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="sarah">Keep in Touch</a>
+                        </li>
                     </ul>
                     <!-- <form class="form-inline my-2 my-lg-0">
                       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
