--- a/templates/Sarah.html
+++ b/templates/Sarah.html
@@ -9,7 +9,11 @@
     {% block content %}
     <div>
         <h1>Sarah</h1>
-        <p>Welcome to my website</p>
+        <p>Hi there! I'm Sarah, a first year PhD student in the <a href ="https://manchestergeomicro.wordpress.com/">Geomicrobiolology group</a> at
+        The University of Manchester. My research is about how bacteria can affect the disposal of radioactive waste. Seem extreme? That's because
+        it is! The bacteria that I work with are extremophiles, meaning that they can live happily in extreme environments. This can be both
+      beneficial and problematic when it comes to how we dispose of our radioactive waste. For example, they may be able to help reduce mobility of
+    radionuclides such as uranium, which is great! </p>
     </div>
     {% endblock %}
 </body>
