--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,7 +20,10 @@
                             <a class="nav-link" href="sarah">Sarah Butterworth</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sarah">Keep in Touch</a>
+                            <a class="nav-link" href="ouradventures">Our Adventures</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="keepintouch">Keep in Touch</a>
                         </li>
                     </ul>
                     <!-- <form class="form-inline my-2 my-lg-0">
