--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
         {% endblock %}
     </div>
     <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
-        <div class="container" align="center">
+        <div class="container" id="footer" align="center">
             <i>Here be dragons!</i> <br> <small>© Katrina Cullen & Sarah Butterworth, 2019</small>
         </div>
     </footer>
