--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -20,7 +20,7 @@
             <br>
             <label for="email">Email address:</label>
             <input type="email" id="email" name="email" required="required">
-            <input type="submit" value="Submit" id="submit-button">
+            <input type="submit" value="Submit" class="btn btn-outline-success my-2 my-sm-0">
           </form>
         </div>
     </div>
