--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,11 +3,13 @@
 <head>
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <link rel="stylesheet" href="static/css/secondary.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div class="container">
+    <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill"> <a class="navbar-brand" href="#">PhD People</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -39,7 +41,7 @@
     {% endblock %}
   </div>
   <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
-    <div class="container" id="footer" align="center">
+    <div id="footer" align="center">
         <i>Here be dragons!</i> <br> <small>© Katrina Cullen & Sarah Butterworth, 2019</small>
     </div>
   </footer>
