--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,8 @@
     <div>
         <h1>PhD People</h1>
         <p>Welcome to PhD People, where you can find out about us and our PhD research!</p>
+        <h2>Who would you like to learn about first?</h2>
+        <a href="katrina"><h2>Katrina</h2></a> <h3>or</h3> <a href="sarah"><h2>Sarah</h2></a>
     </div>
     {% endblock %}
 </body>
