--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -9,7 +9,7 @@
     {% block content %}
     <div>
         <h1>Keep in Touch</h1>
-        <p>Sign up for our monthly email to learn more about our research.</p>
+        <p>Sign up for our monthly email to learn more about our research and be the first to hear about any new papers!</p>
         <div id="contact-form">
           <form method="post" action="/signup">
             <label for="firstname">Name:</label>
