--- a/templates/Katrina.html
+++ b/templates/Katrina.html
@@ -9,9 +9,9 @@
     {% block content %}
     <div>
         <h1>Katrina Cullen</h1>
-        <p>Hi, I'm Katrina, a second year PhD student in the <a href="#">School of Earth and Environmental Sciences at the University of Manchester</a>. I belong to the Organic Geochemistry research group. My research is about an adsorbent call Nyex<sup>TM</sup> used to treat water pollution. I basically get paid to ask lots of the 'stupid questions' about Nyex<sup>TM</sup> for four years, and call myself Dr. at the end!</p>
+        <p>Hi, I'm Katrina, a second year PhD student in the <a href="https://www.sees.manchester.ac.uk/">School of Earth and Environmental Sciences at the University of Manchester</a>. I belong to the Organic Geochemistry research group. My research is about an adsorbent call Nyex<sup>TM</sup> used to treat water pollution. I basically get paid to ask lots of the 'stupid questions' about Nyex<sup>TM</sup> for four years, and call myself Dr. at the end!</p>
         <h2>Well, what is Nyex<sup>TM</sup>?</h2>
-        <p>Good question! Nyex<sup>TM</sup> is a graphite based adsorbent created by <a href="#">Arvia Technology Ltd.</a> To put it simply, it acts like a sponge and adsorbs organics out of water. You can then pass electricity through a bed of Nyex<sup>TM</sup> to blast the organics apart and destroy them. The Nyex is then free to soak up more organics and the cycle starts again!</p>
+        <p>Good question! Nyex<sup>TM</sup> is a graphite based adsorbent created by <a href="https://www.arviatechnology.com/">Arvia Technology Ltd.</a> To put it simply, it acts like a sponge and adsorbs organics out of water. You can then pass electricity through a bed of Nyex<sup>TM</sup> to blast the organics apart and destroy them. The Nyex is then free to soak up more organics and the cycle starts again!</p>
     </div>
     <div>
         <img class="responsive-img" src="/static/images/boxingFlakeNyex.png" alt="cartoon of flake nyex with red boxing gloves"><strong>  vs.  </strong><img class="responsive-img" src="/static/images/boxingGranularNyex.png" alt="cartoon of granulr nyex with blue boxing gloves">
