--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
   <header>
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill"> <a class="navbar-brand" href="#">PhD People</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> 
+        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill"> <a class="navbar-brand" href="#">PhD People</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -36,7 +36,7 @@
       </nav>
     </div>
   </header>
-  <div class="container" align="center">
+  <div class="container" id="full-height" align="center">
     {% block content %}
     {% endblock %}
   </div>
