--- a/templates/Sarah.html
+++ b/templates/Sarah.html
@@ -7,7 +7,7 @@
 <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div>
+    <div class="content">
         <h1>Sarah</h1>
         <p>Hi there! I'm Sarah, a first year PhD student in the <a href ="https://manchestergeomicro.wordpress.com/">Geomicrobiolology group</a> at
         The University of Manchester. My research is about how bacteria can affect the disposal of radioactive waste. Seem extreme? That's because
