--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
   </div>
   <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
     <div id="footer" align="center">
-        <i>Here be dragons!</i> <br> <small>© Katrina Cullen & Sarah Butterworth, 2019</small>
+        <i>A PhD is just like a quest - with lots of "Here be dragons!" and the occassional "Here be treasure!"</i><br><small>© Katrina Cullen & Sarah Butterworth, 2019</small><br><a href="https://twitter.com/katrinapcullen?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @katrinapcullen</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </footer>
 
