--- a/static/css/secondary.css
+++ b/static/css/secondary.css
@@ -31,11 +31,14 @@ h3{
   color: #303542;
 }
 
-article{
-  max-width: inherit;
+a {
+  color: #A94B36;
+  text-decoration: none;
 }
 
-a {
+a:hover{
+  text-decoration: none;
+  font-weight: bold;
   color: #A94B36;
 }
 
@@ -43,6 +46,24 @@ input{
   background: rgba(250, 250, 249, 0.5);
   border: 1px solid #303542;
   border-radius: 0.25rem;
+}
+
+.h1line{
+  display: inline-flex;
+}
+
+.name{
+  display: inline-flex;
+  font-size: 60px;
+}
+
+.name:hover{
+  color: #CAA455;
+  font-size: 5rem;
+}
+
+.twitter-follow-button:hover{
+  opacity: 0.7;
 }
 
 .btn {
@@ -70,9 +91,17 @@ input{
 
 .container{
   padding: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
   background-color: rgba(160, 166, 154, 0.8);
   max-width: 75%;
   }
+
+.content{
+  padding: 30px;
+  padding-top: 20px;
+  align: center;
+}
 
 .responsive-img{
   width: 100%;
@@ -80,13 +109,31 @@ input{
   height: auto;
 }
 
-.adventure-img{
-  max-width: 400px;
-  height: auto;
+.crop {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+.crop img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+
+.row{
+  align: center;
+  left: 50%;
+  max-width: 600px;
 }
 
 .column{
-  max-width: 400px;
+  max-width: 300px;
 }
 
 .navbar{
@@ -150,6 +197,11 @@ input{
   .container{
     max-width: 90%;
     height: 100%;
+  }
+
+  .content{
+    padding: 15px;
+    align: centred;
   }
 
   .navbar-brand{
