--- a/templates/Katrina.html
+++ b/templates/Katrina.html
@@ -7,7 +7,7 @@
 <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div>
+    <div class="content">
         <h1>Katrina Cullen</h1>
         <p>Hi, I'm Katrina, a second year PhD student in the <a href="https://www.sees.manchester.ac.uk/">School of Earth and Environmental Sciences at the University of Manchester</a>. I belong to the Organic Geochemistry research group. My research is about an adsorbent call Nyex<sup>TM</sup> used to treat water pollution. I basically get paid to ask lots of the 'stupid questions' about Nyex<sup>TM</sup> for four years, and call myself Dr. at the end!</p>
         <h2>Well, what is Nyex<sup>TM</sup>?</h2>
