--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -7,7 +7,7 @@
 <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div>
+    <div class="content">
         <h1>Keep in Touch</h1>
         <p>Sign up for our monthly email to learn more about our research and be the first to hear about any new papers!</p>
         <div id="contact-form">
