--- a/templates/ouradventures.html
+++ b/templates/ouradventures.html
@@ -7,18 +7,18 @@
   <body>
     {% extends "layout.html" %}
     {% block content %}
-    <div>
+    <div class="content">
       <h1>Our Adventures</h1>
 
       <!-- Portfolio Gallery Grid -->
       <div class="row">
         <div class="column">
-          <img src="/static/images/hades.png" alt="Belgium" style="width:400px">
+          <div class="crop"><img src="/static/images/hades.png" alt="Belgium"></div>
           <h3>Belgium</h3>
           <p>Exploring an underground research laboratory</p>
         </div>
         <div class="column">
-          <img src="/static/images/goApe.jpg" alt="Go Ape" style="width:400px">
+          <div class="crop"><img src="/static/images/goApe.jpg" alt="Go Ape"></div>
           <h3>Go Ape</h3>
           <p>On a training course Katrina got to go swinging from the trees in Delamere forest as a teambuilding exercise!</p>
         </div>
