--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -13,13 +13,13 @@
         <div id="contact-form">
           <form method="post" action="/signup">
             <label for="firstname">Name:</label>
-            <input type="text" name="firstname">
+            <input type="text" name="firstname" onfocus="this.value=''" value="first name here" required="required">
             <br>
             <label for="lastname">Surname:</label>
-            <input type="text" name="lastname">
+            <input type="text" name="lastname" onfocus="this.value=''" value="surname here">
             <br>
             <label for="email">Email address:</label>
-            <input type="email" id="email" name="email" required="required">
+            <input type="email" id="email" name="email" onfocus="this.value=''" value="youremail@domain.com" required="required">
             <input type="submit" value="Submit" class="btn btn-outline-success my-2 my-sm-0">
           </form>
         </div>
