content on katrina page

--- a/templates/Katrina.html
+++ b/templates/Katrina.html
@@ -10,7 +10,7 @@
     <div class="content" id="full-height">
       <img src="https://media.licdn.com/dms/image/C4E03AQHIcIsG_6ZpqQ/profile-displayphoto-shrink_200_200/0?e=1559174400&v=beta&t=bGc5uKT4NUQUi0Oxywr8In_4r-8WQKJiuYkuGu-Oub4" class="profile">
         <h1>Katrina Cullen</h1>
-        <p>Hi, I'm Katrina, a second year PhD student in the <a href="https://www.sees.manchester.ac.uk/">School of Earth and Environmental Sciences at the University of Manchester</a>. I belong to the Organic Geochemistry research group. My research is about an adsorbent call Nyex<sup>TM</sup> used to treat water pollution. I basically get paid to ask lots of the 'stupid questions' about Nyex<sup>TM</sup> for four years, and call myself Dr. at the end!</p>
+        <p>Hi, I'm Katrina, a second year PhD student in the <a href="https://www.sees.manchester.ac.uk/">School of Earth and Environmental Sciences</a> at the University of Manchester. I belong to the Organic Geochemistry research group. My research is about an adsorbent call Nyex<sup>TM</sup> used to treat water pollution. I basically get paid to ask lots of the 'stupid questions' about Nyex<sup>TM</sup> for four years, and call myself Dr. at the end!</p>
         <!-- <br><img class="responsive-img" src="/static/images/boxingFlakeNyex.png" alt="cartoon of flake nyex with red boxing gloves"><strong>  vs.  </strong><img class="responsive-img" src="/static/images/boxingGranularNyex.png" alt="cartoon of granular nyex with blue boxing gloves">
         <p>Part of my project is determining which type of nyex is better - flakes or granules!</p> -->
         <br><strong><a href="https://www.linkedin.com/in/katrinacullen/">Follow me on LinkedIn!</a></strong>
