--- a/templates/ouradventures.html
+++ b/templates/ouradventures.html
@@ -9,6 +9,7 @@
     {% block content %}
     <div class="content">
       <h1>Our Adventures</h1>
+      <p>Hi <script language="javascript" type="text/javascript" src="/static/js/phdpeople.js">document.write(person)</script> - here you can learn about our PhD adventures!</p>
 
       <!-- Portfolio Gallery Grid -->
       <div class="row">
