--- a/templates/keepintouch.html
+++ b/templates/keepintouch.html
@@ -11,19 +11,24 @@
         <h1>Keep in Touch</h1>
         <p>Sign up for our monthly email to learn more about our research and be the first to hear about any new papers!</p>
         <div id="contact-form">
-          <form method="post" action="/signup">
-            <label for="firstname">Name:</label>
+          <form id="newsletter" method="post" action="/signup">
+            <label for="firstname">Name: </label>
             <input type="text" name="firstname" onfocus="this.value=''" value="first name here" required="required">
             <br>
-            <label for="lastname">Surname:</label>
+            <label for="lastname">Surname: </label>
             <input type="text" name="lastname" onfocus="this.value=''" value="surname here">
             <br>
-            <label for="email">Email address:</label>
+            <label for="email">Email address: </label>
             <input type="email" id="email" name="email" onfocus="this.value=''" value="youremail@domain.com" required="required">
-            <input type="submit" value="Submit" class="btn btn-outline-success my-2 my-sm-0">
+            <input type="button" onclick="myfunction()" value="Submit" class="btn btn-outline-success my-2 my-sm-0">
           </form>
         </div>
     </div>
     {% endblock %}
 </body>
 </html>
+<script>
+function myFunction() {
+  document.getElementById("newsletter").submit();
+}
+</script>
