--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,12 +9,9 @@
   <header>
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill"> <a class="navbar-brand" href="#">PhD People</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill"> <a class="navbar-brand" href="home">PhD People</a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="katrina">Katrina Cullen</a>
             </li>
@@ -28,10 +25,6 @@
               <a class="nav-link" href="keepintouch">Keep in Touch</a>
             </li>
           </ul>
-            <!-- <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form> !-->
         </div>
       </nav>
     </div>
@@ -40,7 +33,8 @@
     {% block content %}
     {% endblock %}
   </div>
-  <footer> <!-- find code to have this "Stick" to the bottom of the page !-->
+  <div style="height: 50px"></div>
+  <footer>
     <div id="footer" align="center">
         <i>A PhD is just like a quest - with lots of "Here be dragons!" and the occassional "Here be treasure!"</i><br><small>© Katrina Cullen & Sarah Butterworth, 2019</small><br><a href="https://twitter.com/katrinapcullen?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @katrinapcullen</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
